@@ -1103,24 +1103,25 @@ class Session(object):
             load = not kw['dont_load']
             util.warn_deprecated("dont_load=True has been renamed to load=False.")
         
-        # TODO: this should be an IdentityDict for instances, but will
-        # need a separate dict for PropertyLoader tuples
         _recursive = {}
         self._autoflush()
+        _object_mapper(instance) # verify mapped
         autoflush = self.autoflush
         try:
             self.autoflush = False
-            return self._merge(instance, load=load, _recursive=_recursive)
+            return self._merge(
+                            attributes.instance_state(instance), 
+                            attributes.instance_dict(instance), 
+                            load=load, _recursive=_recursive)
         finally:
             self.autoflush = autoflush
         
-    def _merge(self, instance, load=True, _recursive=None):
-        mapper = _object_mapper(instance)
-        if instance in _recursive:
-            return _recursive[instance]
+    def _merge(self, state, state_dict, load=True, _recursive=None):
+        mapper = _state_mapper(state)
+        if state in _recursive:
+            return _recursive[state]
 
         new_instance = False
-        state = attributes.instance_state(instance)
         key = state.key
         
         if key is None:
@@ -1134,6 +1135,7 @@ class Session(object):
 
         if key in self.identity_map:
             merged = self.identity_map[key]
+            
         elif not load:
             if state.modified:
                 raise sa_exc.InvalidRequestError(
@@ -1154,16 +1156,21 @@ class Session(object):
         if merged is None:
             merged = mapper.class_manager.new_instance()
             merged_state = attributes.instance_state(merged)
+            merged_dict = attributes.instance_dict(merged)
             new_instance = True
-            self.add(merged)
-
-        _recursive[instance] = merged
+            self._save_or_update_state(merged_state)
+        else:
+            merged_state = attributes.instance_state(merged)
+            merged_dict = attributes.instance_dict(merged)
+            
+        _recursive[state] = merged
 
         for prop in mapper.iterate_properties:
-            prop.merge(self, instance, merged, load, _recursive)
+            prop.merge(self, state, state_dict, merged_state, merged_dict, load, _recursive)
 
         if not load:
-            attributes.instance_state(merged).commit_all(attributes.instance_dict(merged), self.identity_map)  # remove any history
+            # remove any history
+            merged_state.commit_all(merged_dict, self.identity_map)  
 
         if new_instance:
             merged_state._run_on_load(merged)
